# PixelTrader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeCommon.cmake  CMakeCommon.txt  CMakeLists.txt
Engine/Engine/include/: Config.h  Engine.h  EngineMain.h
Engine/Engine/include/Common/: Pointers.h  Types.h
Engine/Engine/include/Containers/: Array.h  Hash.h  Span.h
Engine/Engine/include/Game/: DebugShapeRenderer.h  DrawCanvas.h  GameBase.h  SpriteRenderer.h
Engine/Engine/include/Input/: Input.h
Engine/Engine/include/Math/: hs_Math.h
Engine/Engine/include/Platform/: hs_Windows.h
Engine/Engine/include/Render/: Allocator.h  Buffer.h  DynamicUniformBuffer.h  DynamicUniformBufferEntry.h  Material.h  Render.h  Shader.h  ShaderManager.h  Texture.h  VertexBuffer.h  VertexBufferEntry.h  VertexTypes.h  hs_Shaderc.h
Engine/Engine/include/Resources/: ResourceManager.h  Serialization.h
Engine/Engine/include/World/: Camera.h
Engine/Engine/src/: Engine.cpp  EngineMain.cpp
Engine/Engine/src/Common/: Logging.cpp
Engine/Engine/src/Game/: DebugShapeRenderer.cpp  DrawCanvas.cpp  SpriteRenderer.cpp
Engine/Engine/src/Input/: Input.cpp
Engine/Engine/src/Render/: Allocator.cpp  Buffer.cpp  DynamicUniformBuffer.cpp  Material.cpp  Render.cpp  ShaderManager.cpp  Texture.cpp  VertexBuffer.cpp  VertexCache.cpp  hs_Image.cpp
Engine/Engine/src/Resources/: ResourceManager.cpp  Serialization.cpp
Engine/Engine/src/World/: Camera.cpp
Engine/Shaders/: Phong_fs.hlsl  Phong_vs.hlsl  Skybox_fs.hlsl  Sprite_vs.hlsl  Triangle_fs.hlsl  Triangle_vs.hlsl
Engine/Shaders/ShaderStructs/: Common.h
Engine/include/Common/: Types.h
Engine/include/Containers/: Hash.h
Engine/include/Input/: Input.h
Engine/include/Math/: hs_Math.h
Engine/include/Render/: Allocator.h  Render.h  Shader.h  ShaderManager.h  VertexBuffer.h  VertexCache.h  VkTypes.h  hs_Image.h
Engine/src/Input/: Input.cpp
Engine/src/Render/: Buffer.cpp  DynamicUniformBuffer.cpp  ShaderManager.cpp  VertexCache.cpp
Engine/src/Resources/: ResourceManager.cpp
art/: Ground1.aseprite  Sky.aseprite
art/Animals/: CowSheepWolfMonkey.aseprite
art/Characters/: GreenAnt.aseprite  Rock1.aseprite
art/Cities/: Forest.aseprite  ForestDoor.aseprite
art/Fonts/: PixelFont.aseprite
art/Objects/: AmanitaMuscaria.aseprite  Burrito.aseprite  Cactus.aseprite  CactusApple.aseprite  Chest.aseprite  Crystal.aseprite  FlowerSmall.aseprite  Pumpkin.aseprite  Skull.aseprite  Sunflower.aseprite
art/Weapons/: BowSimple.aseprite
data/configs/: Camera.json
game/include/: Config.h
game/include/common/: Enums.h  Logging.h  Pointers.h  Types.h  Util.h  hs_Assert.h
game/include/containers/: Array.h  Containers.natvis  Hash.h  Span.h
game/include/ecs/: Ecs.h
game/include/game/: Camera.h  DebugShapeRenderer.h  DrawCanvas.h  Game.h  Serialization.h  SpriteRenderer.h  TileRenderer.h
game/include/input/: Input.h
game/include/math/: hs_Math.h  hs_Math.natvis
game/include/render/: Allocator.h  Buffer.h  DynamicUniformBuffer.h  DynamicUniformBufferEntry.h  Material.h  Render.h  Shader.h  ShaderManager.h  Texture.h  VertexBuffer.h  VertexBufferEntry.h  VertexTypes.h  hs_Vulkan.h
game/include/resources/: ResourceManager.h
game/src/: main.cpp
game/src/common/: Logging.cpp
game/src/ecs/: Ecs.cpp
game/src/game/: Camera.cpp  DebugShapeRenderer.cpp  DrawCanvas.cpp  Game.cpp  Serialization.cpp  SpriteRenderer.cpp  TileRenderer.cpp
game/src/input/: Input.cpp
game/src/render/: Allocator.cpp  Buffer.cpp  DynamicUniformBuffer.cpp  Material.cpp  Render.cpp  ShaderManager.cpp  Texture.cpp  VertexBuffer.cpp  VertexCache.cpp  vkr_Image.cpp
shaders/: Shape_fs.hlsl  Shape_vs.hlsl  Skybox_vs.hlsl  Sprite_fs.hlsl  TileCommon.h  Tile_fs.hlsl  Tile_vs.hlsl  Util.h
shaders/shaderStructs/: Common.h
